tests/ui/error-codes/E0004.stderr
error[E0004]: non-exhaustive patterns: `Terminator::HastaLaVistaBaby` not covered
  --> $DIR/E0004.rs:9:11
   |
LL |     match x {
   |           ^ pattern `Terminator::HastaLaVistaBaby` not covered
   |
note: `Terminator` defined here
  --> $DIR/E0004.rs:1:6
   |
LL | enum Terminator {
   |      ^^^^^^^^^^
LL |     HastaLaVistaBaby,
   |     ---------------- not covered
   = note: the matched value is of type `Terminator`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Terminator::TalkToMyHand => {},
LL +         Terminator::HastaLaVistaBaby => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
